vendor/thiserror-1.0.24/tests/ui/transparent-struct-many.stderr
error: #[error(transparent)] requires exactly one field
 --> $DIR/transparent-struct-many.rs:4:1
  |
4 | #[error(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^
