vendor/thiserror-1.0.24/tests/ui/transparent-struct-many.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error(transparent)]
pub struct Error {
    inner: anyhow::Error,
    what: String,
}

fn main() {}
